resources/insights-ephemeral/3scale-ephemeral/api-gateway-ephemeral.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apicast
  name: api-gateway-dev
spec:
  host: api-gateway-dev-3scale-dev.apps.c-rh-c-eph.8p0c.p1.openshiftapps.com
  port:
    targetPort: apigw-dev
  tls:
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIDsjCCApqgAwIBAgIBBjANBgkqhkiG9w0BAQsFADBOMRAwDgYDVQQKDAdSZWQg
[...]
      fQEw+cWRxwFPJujSOTSKRHZDo1UwOIQbxqkbznSHlLCICEXxuvQ=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIID6DCCAtCgAwIBAgIBFDANBgkqhkiG9w0BAQsFADCBpTELMAkGA1UEBhMCVVMx
[...]
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIENDCCAxygAwIBAgIJANunI0D662cnMA0GCSqGSIb3DQEBCwUAMIGlMQswCQYD
[...]
      RxNEp7yHoXcwn+fXna+t5JWh1gxUZty3
      -----END CERTIFICATE-----
    termination: reencrypt
  to:
    kind: Service
    name: apicast
    weight: 100
  wildcardPolicy: None
